crates/core/src/html/snapshots/epub_tailor_core__html__footnotes__tests__javascript_with_data_target_is_rewritten_snapshot.snap
---
source: crates/core/src/html/footnotes.rs
expression: out
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml"><head><title>T</title></head><body><p><a href="#fn1" data-target="#fn1">1</a></p></body></html>
