crates/core/src/html/snapshots/epub_tailor_core__html__footnotes__tests__javascript_without_target_is_unwrapped_snapshot.snap
---
source: crates/core/src/html/footnotes.rs
expression: out
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml"><head><title>T</title></head><body><p>see this note</p></body></html>
